# rust-clippy

./: .cursorrules  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml  build.rs  clippy.toml  current  index.html  needless_conversion_for_trait_unnecessary_to_owned  nnnn.md  output.txt  pr_collapsible_tuple_let.md  rust-toolchain  rust-toolchain.toml  setup-toolchain.sh  stable  test_my_lint.rs  test_never_loop_iterators.rs  test_toml_parse.rs  triagebot.toml  v0.0.212  versions.json
clippy_config/: Cargo.toml
clippy_config/src/: conf.rs  de.rs  lib.rs  lint_config.rs  metadata.rs  msrvs.rs  types.rs
clippy_data_structures/: Cargo.toml
clippy_data_structures/src/: bit_set_2d.rs  bit_slice.rs  lib.rs  range.rs  slice_set.rs  sorted.rs  traits.rs  vec_map.rs  vec_set.rs
clippy_data_structures/tests/: bit_slice.rs  bit_slice_2d.rs  growable_bit_set_2d.rs  slice_set.rs
clippy_dev/: Cargo.toml
clippy_dev/src/: check_lint_version.rs  deprecate_lint.rs  diag.rs  dogfood.rs  edit_lints.rs  fmt.rs  generate.rs  ir.rs  issues_for_lint.rs  lib.rs  lint.rs  lintcheck.rs  main.rs  new_lint.rs  parse.rs  ra_setup.rs  release.rs  rename_lint.rs  serve.rs  source_map.rs  sync.rs  update_lints.rs  utils.rs
clippy_dev/src/parse/: cursor.rs
clippy_dev/src/setup/: intellij.rs  toolchain.rs  vscode.rs
clippy_dummy/: Cargo.toml  build.rs  crates-readme.md
clippy_internal_lints/: Cargo.toml
clippy_internal_lints/src/: almost_standard_lint_formulation.rs  collapsible_calls.rs  interning_defined_symbol.rs  invalid_paths.rs  lib.rs  lint_without_lint_pass.rs  metadata_collector.rs  msrv_attr_impl.rs  produce_ice.rs  unnecessary_def_path.rs  unsorted_clippy_utils_paths.rs
clippy_lints/: Cargo.toml  build.rs  unsafe-lints
clippy_lints/docs/correctness/: APPROX_CONSTANT.md
clippy_lints/docs/restriction/: INTEGER_ARITHMETIC.md
clippy_lints/src/: absolute_paths.rs  absurd_extreme_comparisons.rs  almost_complete_range.rs  always_true_conditions.rs  ambiguous_method_calls.rs  ambiguous_method_names.rs  and_then_then_some.rs  any_coerce.rs  approx_const.rs  arbitrary_source_item_ordering.rs  arc_with_non_send_sync.rs  arithmetic.rs  as_conversions.rs  as_ptr_in_map.rs  asm_syntax.rs  assert_is_empty.rs  assert_multiple.rs  assertions_on_collection_emptiness.rs  assertions_on_constants.rs  assertions_on_result_states.rs  assign_ops.rs  assigning_clones.rs  async_yields_async.rs  attrs.rs  await_holding_invalid.rs  bare_dos_device_names.rs  bit_mask.rs  bit_width.rs  blacklisted_name.rs  block_in_if_condition.rs  block_scrutinee.rs  blocks_in_conditions.rs  blocks_in_if_conditions.rs  bool_assert_comparison.rs  bool_assert_inverted.rs  bool_comparison.rs  bool_to_int_with_if.rs  booleans.rs  borrow_as_ptr.rs  borrow_deref_ref.rs  (+655 more)
clippy_lints/src/attrs/: allow_attributes.rs  allow_attributes_without_reason.rs  bare_must_use.rs  blanket_allow_warnings.rs  conditional_no_std_attribute.rs  deprecated_cfg_attr.rs  duplicated_attributes.rs  forbid.rs  missing_no_std_attribute.rs  mod.rs  non_minimal_cfg.rs  repr_attributes.rs  unnecessary_clippy_cfg.rs  useless_attribute.rs  utils.rs
clippy_lints/src/cargo/: feature_name.rs  lint_groups_priority.rs  missing_rust_version.rs  missing_workspace_lints.rs  mod.rs  multiple_crate_versions.rs  require_workspace_dependencies.rs  workspace_dependencies.rs
clippy_lints/src/casts/: as_pointer_underscore.rs  as_ptr_cast_mut.rs  as_ptr_cast_underscore.rs  as_underscore.rs  as_underscore_ptr.rs  borrow_as_ptr.rs  cast_abs_to_unsigned.rs  cast_integer.rs  cast_lossless.rs  cast_nan_to_int.rs  cast_possible_truncation.rs  cast_possible_wrap.rs  cast_precision_loss.rs  cast_ptr_alignment.rs  cast_ptr_sized_int.rs  cast_sign_loss.rs  cast_slice_different_sizes.rs  cast_slice_from_raw_parts.rs  confusing_method_to_numeric_cast.rs  fn_to_numeric_cast.rs  fn_to_numeric_cast_any.rs  mod.rs  utils.rs  (+12 more)
clippy_lints_methods/: Cargo.toml
clippy_lints_methods/src/: bind_instead_of_map.rs  bytecount.rs  bytes_count_to_len.rs  bytes_nth.rs  case_sensitive_file_extension_comparisons.rs  chars_cmp.rs  chars_cmp_with_unwrap.rs  chars_last_cmp.rs  chars_last_cmp_with_unwrap.rs  chars_next_cmp.rs  chars_next_cmp_with_unwrap.rs  clear_with_drain.rs  clone_on_copy.rs  clone_on_ref_ptr.rs  cloned_instead_of_copied.rs  collapsible_str_replace.rs  declared_lints.rs  double_ended_iterator_last.rs  drain_collect.rs  err_expect.rs  expect_fun_call.rs  extend_with_drain.rs  filetype_is_file.rs  filter_map.rs  filter_map_bool_then.rs  filter_map_identity.rs  filter_map_next.rs  filter_next.rs  flat_map_identity.rs  flat_map_option.rs  format_collect.rs  from_iter_instead_of_collect.rs  get_first.rs  get_last_with_len.rs  get_unwrap.rs  implicit_clone.rs  inefficient_to_string.rs  inspect_for_each.rs  into_iter_on_ref.rs  io_other_error.rs  (+103 more)
clippy_macros/: Cargo.toml
clippy_macros/src/: lib.rs  sugg.rs
clippy_macros/tests/: expr_sugg.rs
clippy_tests/: Cargo.toml
clippy_tests/examples/: .gitignore  const_static_lifetime.rs  const_static_lifetime.stderr  range.rs  range.stderr
clippy_tests/src/: compile.rs  diff.rs  fix.rs  human.rs  main.rs  test_results.rs
clippy_utils/: Cargo.toml  README.md
clippy_utils/src/: ast_utils.rs  attrs.rs  check_proc_macro.rs  consts.rs  diagnostics.rs  disallowed_profiles.rs  eager_or_lazy.rs  higher.rs  hir_utils.rs  internal_lints.rs  lib.rs  macros.rs  msrvs.rs  nightly.rs  numeric_literal.rs  paths.rs  ptr.rs  qualify_min_const_fn.rs  res.rs  returns.rs  source.rs  str_utils.rs  sugg.rs  sym.rs  ty.rs  usage.rs  visitors.rs
lintcheck/: Cargo.toml  README.md  lintcheck_crates.toml
lintcheck/ci-config/: clippy.toml
lintcheck/lintcheck_crates/: Cargo.toml
lintcheck/src/: config.rs  driver.rs  input.rs  json.rs  main.rs  output.rs
plugin_example/: Cargo.toml
plugin_example/src/: allow_clippy_lints.rs
plugin_example/tests/: clippy-test.rs
plugin_examples/allow_clippy_lints/: Cargo.toml
plugin_examples/clippy_lints/: Cargo.toml
tests/workspace_test/: Cargo.toml
(+4978 files in other folders)
