[package]
name = "clippy_config"
version = "0.1.90"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", default-features = false }
clippy_utils = { path = "../clippy_utils" }
itertools = "0.12"
toml_edit = { version = "0.22.27", default-features = false, features = ["parse"] }

[dev-dependencies]
walkdir = "2.3"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
