[package]
name = "clippy_data_structures"
version = "0.0.1"
edition = "2021"

[dependencies]
arrayvec = { version = "0.7", default-features = false}
smallvec = { version = "1.8.1", features = ["union", "may_dangle", "const_new"] }

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
