[package]
name = "clippy_dev"
description = "Clippy developer tooling"
version = "0.0.1"
edition = "2024"

[dependencies]
annotate-snippets = { version = "0.12.10", features = ["simd"] }
anstream = "0.6.20"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.4", features = ["derive"] }
indoc = "1.0"
itertools = "0.12"
memchr = "2.7.6"
opener = "0.7"
rustc-literal-escaper = "0.0.7"
walkdir = "2.3"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
