[package]
name = "clippy_utils" # rename to clippy before publishing
version = "0.0.1"
edition = "2021"
readme = "crates-readme.md"
description = "Helpful utils to write Clippy lints"
build = "build.rs"

repository = "https://github.com/rust-lang/rust-clippy"

license = "MIT OR Apache-2.0"
keywords = ["clippy", "lint", "utils"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[build-dependencies]
term = "0.7"
