[package]
name = "clippy_lints"
version = "0.1.61"
description = "A bunch of helpful lints to avoid common pitfalls in Rust"
repository = "https://github.com/rust-lang/rust-clippy"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["clippy", "lint", "plugin"]
edition = "2021"

[target.'cfg(NOT_A_PLATFORM)'.dependencies]
rustc_arena = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_arena" }
rustc_ast = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_ast" }
rustc_ast_pretty = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_ast_pretty" }
rustc_attr = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_attr" }
rustc_data_structures = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_data_structures" }
rustc_driver = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_driver" }
rustc_errors = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_errors" }
rustc_hir = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_hir" }
rustc_hir_pretty = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_hir_pretty" }
rustc_index = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_index" }
rustc_infer = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_infer" }
rustc_lexer = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_lexer" }
rustc_lint = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_lint" }
rustc_middle = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_middle" }
rustc_mir_dataflow = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_mir_dataflow" }
rustc_parse = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_parse" }
rustc_parse_format = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_parse_format" }
rustc_session = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_session" }
rustc_span = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_span" }
rustc_target = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_target" }
rustc_trait_selection = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_trait_selection" }
rustc_typeck = { path = "/Users/yoavlavi/dev/rust/compiler/rustc_typeck" }

[dependencies]
cargo_metadata = "0.14"
clippy_utils = { path = "../clippy_utils" }
if_chain = "1.0"
itertools = "0.10.1"
pulldown-cmark = { version = "0.9", default-features = false }
quine-mc_cluskey = "0.2"
regex-syntax = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
toml = "0.5"
unicode-normalization = "0.1"
unicode-script = { version = "0.5", default-features = false }
semver = "1.0"
rustc-semver = "1.1"
# NOTE: cargo requires serde feat in its url dep
# see <https://github.com/rust-lang/rust/pull/63587#issuecomment-522343864>
url = { version = "2.2", features = ["serde"] }

[features]
deny-warnings = ["clippy_utils/deny-warnings"]
# build clippy with internal lints enabled, off by default
internal = ["clippy_utils/internal", "serde_json"]

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
