[package]
name = "clippy_tests"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]

[dependencies]
duct = "0.8.2"
env_logger = "0.5.0-rc.1"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4.1"
rustfix = { git = "https://github.com/killercup/rustfix" }
serde_json = "1.0"
tempdir = "0.3.5"
rayon = "0.9.0"
difference = "1.0.0"
ansi_term = "0.10.2"
