[package]
name = "lintcheck"
version = "0.0.1"
description = "tool to monitor impact of changes in Clippys lints on a part of the ecosystem"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-clippy"
categories = ["development-tools"]
edition = "2018"
publish = false

[dependencies]
clap = "2.33"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[features]
deny-warnings = []
