[package]
name = "lintcheck_crates"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.56", optional = true }
async-trait = { version = "0.1.53", optional = true }
bitflags = { version = "1.3.2", optional = true }
cargo = { version = "0.61.0", optional = true }
cfg-expr = { version = "0.10.2", optional = true }
cxx = { version = "1.0.66", optional = true }
iron = { version = "0.6.1", optional = true }
libc = { version = "0.2.122", optional = true }
log = { version = "0.4.16", optional = true }
proc-macro2 = { version = "1.0.37", optional = true }
puffin = { version = "0.13.1", optional = true }
quote = { version = "1.0.18", optional = true }
rand = { version = "0.8.5", optional = true }
rand_core = { version = "0.6.3", optional = true }
rayon = { version = "1.5.1", optional = true }
regex = { version = "1.5.5", optional = true }
ripgrep = { version = "13.0.0", optional = true, artifact = "bin" }
rpmalloc = { version = "0.2.2", optional = true }
ryu = { version = "1.0.9", optional = true }
serde = { version = "1.0.136", optional = true }
serde_yaml = { version = "0.8.23", optional = true }
syn = { version = "1.0.91", optional = true }
tame-oidc = { version = "0.4.0", optional = true }
thiserror = { version = "1.0.30", optional = true }
unicode-xid = { version = "0.2.2", optional = true }
xsv = { version = "0.13.0", optional = true, artifact = "bin" }

[package.metadata.lintcheck]
ignore = [
    # crates with native build stuff are way slower under clippy for some reason
    "*-sys",
    "ring",
    "winapi",
    # old dependency with an unnormalized Cargo.toml that contains a `path =` dependency
    "commoncrypto",
    # Not many lints but slow under clippy
    "combine",
    # 258315 occurrences of clippy::match_same_arms
    "unicode-normalization",
    # 8210 occurrences of clippy::unreadable_literal
    "crc32fast",
]
